# ros2-robotics

./: .gitignore  README.md
docs/: 01_ros2_core_basics.md  02_parameters_services_actions_launch.md
projects/01_ros2_core_basics/: README.md
projects/01_ros2_core_basics/lessons/: 01_ros2_core_basics.md
projects/01_ros2_core_basics/src/ros2_job_ready_basics/: setup.cfg  setup.py
projects/02_mini_amr_simulation/: README.md
projects/02_mini_amr_simulation/lessons/: 00_how_mini_amr_description_is_built.md  01_urdf_robot_model_rviz.md  02_odometry_and_tf_motion.md  03_cmd_vel_keyboard_control.md  04_fake_lidar_scan.md  05_lidar_safety_filter.md  06_world_obstacles_and_realistic_safety.md  07_launch_parameters_obstacle_tuning.md  README.md
projects/02_mini_amr_simulation/scripts/: verify_cmd_vel_control.sh  verify_description.sh  verify_fake_lidar.sh  verify_motion.sh  verify_safety_filter.sh
projects/02_mini_amr_simulation/src/: README.md
projects/02_mini_amr_simulation/src/mini_amr_description/: README.md  package.xml  setup.cfg  setup.py
projects/02_mini_amr_simulation/src/mini_amr_motion/: README.md  package.xml  setup.cfg  setup.py
projects/02_mini_amr_simulation/src/mini_amr_motion/launch/: cmd_vel_display.launch.py  moving_display.launch.py
projects/02_mini_amr_simulation/src/mini_amr_motion/mini_amr_motion/: circle_motion_node.py  cmd_vel_motion_node.py  keyboard_teleop_node.py
projects/03_warehouse_navigation/: README.md
projects/03_warehouse_navigation/lessons/: 01_simple_goal_navigation.md  02_waypoint_patrol.md  03_occupancy_grid_map.md  README.md
projects/03_warehouse_navigation/scripts/: open_warehouse_rviz_safe.sh  verify_warehouse_navigation_start.sh  verify_waypoint_patrol.sh
projects/03_warehouse_navigation/src/: README.md
projects/03_warehouse_navigation/src/warehouse_navigation/: package.xml  setup.py
projects/03_warehouse_navigation/src/warehouse_navigation/launch/: warehouse_nav_demo.launch.py  warehouse_waypoint_demo.launch.py
projects/03_warehouse_navigation/src/warehouse_navigation/resource/: warehouse_navigation
projects/03_warehouse_navigation/src/warehouse_navigation/rviz/: warehouse_navigation.rviz
projects/03_warehouse_navigation/src/warehouse_navigation/warehouse_navigation/: __init__.py  clicked_point_goal_node.py  send_goal_node.py  simple_goal_follower_node.py  warehouse_map_node.py  warehouse_scene_node.py  waypoint_patrol_node.py
projects/04_perception_to_action/: README.md
projects/04_perception_to_action/lessons/: README.md
projects/04_perception_to_action/src/: README.md
projects/05_manipulation_pick_and_place/: README.md
projects/05_manipulation_pick_and_place/lessons/: README.md
projects/05_manipulation_pick_and_place/src/: README.md
projects/06_embodied_ai_task_executor/: README.md
projects/06_embodied_ai_task_executor/lessons/: README.md
projects/06_embodied_ai_task_executor/src/: README.md
projects/07_quadruped_wheel_leg_robot/: README.md
projects/07_quadruped_wheel_leg_robot/lessons/: README.md
projects/07_quadruped_wheel_leg_robot/scripts/: stop_quadruped_demo.sh  verify_quadruped_demo.sh
projects/07_quadruped_wheel_leg_robot/src/quadruped_wheel_leg/: package.xml  setup.cfg  setup.py
projects/07_quadruped_wheel_leg_robot/src/quadruped_wheel_leg/launch/: wheel_leg_demo.launch.py  wheel_leg_joystick.launch.py
projects/07_quadruped_wheel_leg_robot/src/quadruped_wheel_leg/quadruped_wheel_leg/: demo_command_node.py  on_screen_joystick_node.py  virtual_joystick_node.py  wheel_leg_motion_node.py
projects/07_quadruped_wheel_leg_robot/src/quadruped_wheel_leg/rviz/: wheel_leg_quadruped.rviz
projects/07_quadruped_wheel_leg_robot/src/quadruped_wheel_leg/urdf/: wheel_leg_quadruped.urdf
scripts/: verify_core_basics.sh
src/: README.md  mini_amr_description  mini_amr_motion  mini_amr_sensors  quadruped_wheel_leg  ros2_job_ready_basics  warehouse_navigation
src/ros2_job_ready_basics/: README.md  package.xml  setup.py
src/ros2_job_ready_basics/launch/: core_basics.launch.py
src/ros2_job_ready_basics/ros2_job_ready_basics/: fibonacci_action_server.py  goal_publisher.py  goal_subscriber.py  mission_service_server.py
(+18 files in other folders)
